fixed: minor bug fixes
Visual scrollbar issues in the log view.
New Tag Dialog: Checkbox 'Common tags' had stopped working.
Stop reporting random errors from javafx.graphics to the user when opening files.

--- a/src/main/resources/ntag.css
+++ b/src/main/resources/ntag.css
@@ -1,7 +1,32 @@
+/*
+ *   This file is part of NTag (audio file tag editor).
+ *
+ *   NTag is free software: you can redistribute it and/or modify
+ *   it under the terms of the GNU General Public License as published by
+ *   the Free Software Foundation, either version 3 of the License, or
+ *   (at your option) any later version.
+ *
+ *   NTag is distributed in the hope that it will be useful,
+ *   but WITHOUT ANY WARRANTY; without even the implied warranty of
+ *   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ *   GNU General Public License for more details.
+ *
+ *   You should have received a copy of the GNU General Public License
+ *   along with NTag.  If not, see <http://www.gnu.org/licenses/>.
+ *
+ *   Copyright 2021, Nico Rittstieg
+ *
+ */
+
 /* JavaFX CSS - Leave this comment until you have at least create one rule which uses -fx-Property */
 
 .textarea-infos {
   -fx-font-family: monospace;
+}
+
+.textarea-infos > .scroll-pane {
+  -fx-vbar-policy:always;
+  -fx-hbar-policy:always;
 }
 
 .statusbar {
